Version 6.0.0
* [DXFC-191] Fixed bug where crashes and memory corruption occurred when adding and removing symbols
* [DXFC-190] Fixed bug with memory corruption during connection restoration and changing the list of subscription symbols

Version 5.13.0
* [DXFC-189] Fixed bug with inability to receive orders with Scope = Aggregate

Version 5.12.0
* [DXFC-185] The new order source for cboe C2 options was added: C2OX

Version 5.11.0
* [DXFC-182] The new order (price level) sources were added: ntv, glbx, xeur
* [DXFC-178] Added the ability to log received and transmitted data blocks
  - [API] The `NativeTools.InitializeLogging` function extended by optional parameter `logDataTransfer`
    This flag defining the logging mode; if it's `true` then the data transfer (portions of received and sent data) logging will be enabled.
    It will also create two files with names similar to the name of the main log file, but ending with "*.receive.data" and "*.send.data"
  - [Samples] Added the additional command line parameter:
    - `-p` - Enables the data transfer logging

Version 5.10.0
* [DXFC-173] [Samples] Added additional command line parameters to the `dxf_simple_order_book_sample` sample:
  - host:port - The address of dxfeed server (exmaple: demo.dxfeed.com:7300)
  - symbol    - The instrument symbol: IBM, MSFT, AAPL, ...
  - date      - The date of time series event in the format YYYY-MM-DD
  - source    - The source for order events (default: NTV): NTV,NFX,ESPD,XNFI,ICE,ISE,DEA,DEX,BYX,BZX,BATE,CHIX,CEUX,BXTR,IST,BI20,ABE,FAIR,GLBX,ERIS,XEUR,CFE,SMFE
  -l <limit>  - The number of displayed bids or asks in a order book (0 - unlimited [FOD], default: 10)
  -T <token>  - The authorization token
* [DXFC-174] Added the ability to subscribe to regional quotes. Now Quote subscription requests both composite and regional events. Please, use the `Scope` field to filter events.