@@ -1,6 +1,8 @@
 Version 6.0.0
 * [DXFC-191] Fixed bug where crashes and memory corruption occurred when adding and removing symbols
 * [DXFC-190] Fixed bug with memory corruption during connection restoration and changing the list of subscription symbols
+* [DXFC-184] [Breaking changes] The order source for subscribing to aggregated data (MarketMaker) has been changed from COMPOSITE_ASK|BID to AGGREGATE_ASK|BID.
+  This is now compliant with Java API
 
 Version 5.13.0
 * [DXFC-189] Fixed bug with inability to receive orders with Scope = Aggregate
